--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,11 @@ classifiers = [
 	"Programming Language :: Python :: 3.13",
 	"Typing :: Typed",]
 dependencies = [
-	"astToolkit==0.3.2",
+	"astToolkit==0.3.3",
 	"mypy",
 	"pandas",
 	"pandas-stubs",
+	"pyarrow",
 	"pyupgrade",
 	"tomli",
 	"Z0Z_tools",]
