--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,23 +17,21 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
-  "Typing :: Typed",
-]
+  "Typing :: Typed",]
 urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/astToolFactory", Repository = "https://github.com/hunterhogan/astToolFactory.git" }
 dependencies = [
   "Z0Z_tools",
   "astToolkit==0.3.6",
   "pandas",
   "pyarrow",
-  "tomli",
-]
+  "tomli",]
 optional-dependencies = { testing = [
   "mypy",
   "pytest",
   "pytest-cov",
   "pytest-xdist",
   "pyupgrade",
-] }
+  "setuptools-scm",] }
 
 [build-system]
 requires = ["setuptools"]
@@ -49,8 +47,7 @@ run = { branch = true, concurrency = [
 ], data_file = "tests/coverage/.coverage", omit = [
   "tests/*",
 ], parallel = true, source = [
-  ".",
-] }
+  ".",] }
 xml = { output = "tests/coverage/coverage.xml" }
 
 [tool.pytest.ini_options]
