--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
-  "Typing :: Typed",]
+  "Typing :: Typed",
+]
 urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/astToolFactory", Repository = "https://github.com/hunterhogan/astToolFactory.git" }
 dependencies = [
   "astToolkit==0.5.4",
@@ -26,14 +27,15 @@ dependencies = [
   "pyarrow",
   "tomli",
   "Z0Z_tools",
-  ]
+]
 optional-dependencies = { testing = [
   "mypy",
   "pytest",
   "pytest-cov",
   "pytest-xdist",
   "pyupgrade",
-  "setuptools-scm",] }
+  "setuptools-scm",
+] }
 
 [build-system]
 requires = ["setuptools"]
@@ -49,7 +51,8 @@ run = { branch = true, concurrency = [
 ], data_file = "tests/coverage/.coverage", omit = [
   "tests/*",
 ], parallel = true, source = [
-  ".",] }
+  ".",
+] }
 xml = { output = "tests/coverage/coverage.xml" }
 
 [tool.pytest.ini_options]
