Refactor imports and update dataframe processing to enhance compatibility with ast.AST structures

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
   "pandas",
   "pyarrow",
   "tomli",
+  "typeshed_client",
   "Z0Z_tools",
 ]
 optional-dependencies = { testing = [
