Update dependencies in pyproject.toml
- Changed the readme format to a simpler string reference.
- Updated the astToolkit dependency version from 0.5.6 to 0.5.7.
- Added Z0Z_tools as a new dependency and removed its previous duplicate entry.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "astToolFactory"
 version = "0.0.1"
 description = ""
-readme = { file = "README.md", content-type = "text/markdown" }
+readme = "README.md"
 requires-python = ">=3.12"
 license = { 'text' = "CC-BY-NC-4.0" }
 authors = [{ name = "Hunter Hogan", email = "HunterHogan@pm.me" }]
@@ -21,13 +21,13 @@ classifiers = [
 ]
 urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/astToolFactory", Repository = "https://github.com/hunterhogan/astToolFactory.git" }
 dependencies = [
-  "astToolkit==0.5.6",
+  "Z0Z_tools",
+  "astToolkit==0.5.7",
   "isort",
   "pandas",
   "pyarrow",
   "tomli",
   "typeshed_client",
-  "Z0Z_tools",
 ]
 optional-dependencies = { testing = [
   "mypy",
