Add sync script and workflow for CPython ASDL files; update dependencies in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,19 +21,20 @@ classifiers = [
 ]
 urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/astToolFactory", Repository = "https://github.com/hunterhogan/astToolFactory.git" }
 dependencies = [
-  "Z0Z_tools",
   "astToolkit==0.5.12",
   "isort",
   "pandas",
   "pyarrow",
   "tomli",
   "typeshed_client",
+  "Z0Z_tools",
 ]
 optional-dependencies = { testing = [
   "mypy",
-  "pytest",
+  "PyGithub",
   "pytest-cov",
   "pytest-xdist",
+  "pytest",
   "pyupgrade",
   "setuptools-scm",
 ] }
