Add documentation for AST types and improve type handling
- Introduced a new module `astTypes.py` to store docstrings for various AST types, including their meanings and relationships.
- Updated `_snippets.py` to correct type casting for `typing_TypeAlias` and `typing_TypeVar`.
- Refactored `_theSSOT.py` and `_theSSOTannex.py` to remove unused autoflake settings and streamline the settings structure.
- Enhanced `documentation.py` with new classes and functions to manage AST class data and generate docstrings.
- Removed the `makeTool_dump` function from `factory.py` to clean up unused code.
- Updated `factoryAnnex.py` to append docstrings for `TypeVar` instances.
- Bumped `astToolkit` version in `pyproject.toml` and adjusted dependencies for better compatibility.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,21 +21,18 @@ classifiers = [
 ]
 urls = { Donate = "https://www.patreon.com/integrated", Homepage = "https://github.com/hunterhogan/astToolFactory", Repository = "https://github.com/hunterhogan/astToolFactory.git" }
 dependencies = [
-  "astToolkit==0.8.0",
-  "hunterMakesPy",
-  "isort",
+  "astToolkit==0.9.0",
+  "hunterMakesPy>=0.3.0",
   "pandas",
   "pyarrow",
   "tomli",
   "typeshed_client",
 ]
 optional-dependencies = { testing = [
-  "mypy",
   "PyGithub",
   "pytest-cov",
   "pytest-xdist",
   "pytest",
-  "pyupgrade",
   "setuptools-scm",
 ] }
 
