--- a/.editorconfig
+++ b/.editorconfig
@@ -4,13 +4,23 @@
 root = true
 
 [**]
-indent_style = tab
-indent_size = 4
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
+charset						= utf-8
+end_of_line					= lf
+indent_size					= tab
+indent_style				= tab
+insert_final_newline		= true
+max_line_length				= 120
+spelling_language			= en-US
+tab_width					= 4
+trim_trailing_whitespace	= true
 
-[*.md]
-indent_style = space
-indent_size = 2
+[*.md,*.toml,*.yml]
+charset						= utf-8
+end_of_line					= lf
+indent_size					= 2
+indent_style				= space
+insert_final_newline		= true
+max_line_length				= 120
+spelling_language			= en-US
+tab_width					= 2
+trim_trailing_whitespace	= true
